prometheus_ClusterIP_svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-03-07T18:53:39Z"
  labels:
    managed-by: prometheus-operator
    operated-prometheus: "true"
  name: prometheus-operated
  namespace: monitoring
  ownerReferences:
  - apiVersion: monitoring.coreos.com/v1
    kind: Prometheus
    name: k8s
    uid: 6fcccd09-6aaf-4634-8b45-d8fd54d8dbe3
  resourceVersion: "955511"
  uid: 2229dfcb-a173-4073-8916-a2adb6a36b61
spec:
  clusterIP: 10.43.160.15
  clusterIPs:
  - 10.43.160.15
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 31111
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app.kubernetes.io/name: prometheus
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
